# botfarm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: routes.py
app/core/: config.py  db.py  dependencies.py
app/database/: crud.py
app/database/models/: base.py  user.py
app/schemas/: user.py
app/services/: user_service.py
