[project]
name = "botfarm"
version = "0.1.0"
description = "Botfarm service for E2E testing"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "email-validator>=2.0.0",
    "fastapi>=0.104.0",
    "passlib==1.7.4",
    "bcrypt==4.1.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"
